WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263618
REGRESSION (UI-side compositing) changing between non-overlay and overlay scrollbars should adjust the size of the scrollable area
https://bugs.webkit.org/show_bug.cgi?id=263618
Summary
REGRESSION (UI-side compositing) changing between non-overlay and overlay scr...
Nikos Mouchtaris
Reported
2023-10-24 15:20:27 PDT
REGRESSION (UI-side compositing) changing between non-overlay and overlay scrollbars should adjust the size of the scrollable area
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-25 17:54:24 PDT
<
rdar://problem/117507268
>
Nikos Mouchtaris
Comment 2
2023-10-25 18:13:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19576
EWS
Comment 3
2024-03-20 18:16:22 PDT
Committed
276439@main
(81451dabde97): <
https://commits.webkit.org/276439@main
> Reviewed commits have been landed. Closing PR #19576 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug