Source/WebCore/platform/Scrollbar.h
@@ -143,6 +143,7 @@ public:
 
     bool shouldRegisterScrollbar() const;
     int minimumThumbLength() const;
+    void updateScrollbarThickness();
 
     virtual bool isMacScrollbar() const { return false; }
 
