Source/WebCore/rendering/RenderLayerScrollableArea.cpp
@@ -652,6 +652,7 @@ IntSize RenderLayerScrollableArea::reachableTotalContentsSize() const
 
 void RenderLayerScrollableArea::availableContentSizeChanged(AvailableSizeChangeReason reason)
 {
+    ALWAYS_LOG_WITH_STREAM(stream << " RenderLayerScrollableArea::availableContentSizeChanged " << scrollingNodeID());
     ScrollableArea::availableContentSizeChanged(reason);
 
     auto& renderer = m_layer.renderer();
@@ -660,6 +661,7 @@ void RenderLayerScrollableArea::availableContentSizeChanged(AvailableSizeChangeR
             downcast<RenderBlock>(renderer).setShouldForceRelayoutChildren(true);
         renderer.setNeedsLayout();
     }
+    ALWAYS_LOG_WITH_STREAM(stream << " RenderLayerScrollableArea::availableContentSizeChanged " << m_layer.renderer().needsLayout());
 }
 
 bool RenderLayerScrollableArea::shouldSuspendScrollAnimations() const
